--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "canvas": "^2.9.0",
     "request": "^2.88.2",
     "@discordjs/voice": "^0.8.0",
-    "ffmpeg-static": "^5.0.0",
+    "@discordjs/opus": "^0.4.0",
     "play-dl": "^1.8.8"
   },
   "devDependencies": {
