--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "request": "^2.88.2",
     "solenolyrics": "^5.0.0",
     "tweetnacl": "^1.0.3",
-    "yts": "^2.0.1"
+    "yt-search": "^2.10.3"
   },
   "devDependencies": {
     "jshint": "^2.9.5"
