--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "mathjs": "^10.1.1",
     "node-fetch": "^2.6.1",
     "pm2": "^5.2.0",
-    "request": "^2.88.2",
     "solenolyrics": "^5.0.0",
-    "yt-search": "^2.10.3"
+    "yt-search": "^2.10.3",
+    "enmap": "^5.9.0"
   },
   "devDependencies": {
     "jshint": "^2.9.5"
